2008-02-17  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Format comment.

	* TODO:
	* src/bmltest_info.c:
	* tests/sorttable.js:
	* tests/testmachine.sh:
	  Generate html result table.

2008-02-16  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	  Remove newline from log print.

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/bml.c:
	* src/bml.h:
	  Add AttributesChanged to wrapped api.

	* src/bmltest_process.c:
	  Try calling this to get ninja delay fixed. I looks like something is
	  not getting initialized here.

2008-02-11  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_process.c:
	  Extended the test app.

2008-02-11  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  New version

2008-02-11  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Don't access version, if its not initialized yet.

2008-02-10  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  New version

2008-02-10  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/MachineInterface.h:
	* src/BuzzMachineLoader/dsplib.h:
	  Rebuild under windows.
	
2008-02-07  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper1/wine/win32.c:
	  More crash info. Playing with CXX exception handler.

2008-02-06  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  Some wine comments. Not sure if this is used at all.

2008-02-04  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* dllwrapper1/wine/pe_image.c:
	* dllwrapper1/wine/win32.c: