@@ -1,3 +1,12 @@
+2008-02-18  Stefan Kost  <ensonic@users.sf.net>
+
+	* TODO:
+	* tests/testmachine.sh:
+	  Get more details and also link to the results.
+
+	* src/bmltest_info.c:
+	  Do fflush to increase the likelyhood we have the logs complete.  
+
 2008-02-17  Stefan Kost  <ensonic@users.sf.net>
 
 	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
